5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1798_2569.log
== TEST (2019-06-08 17:01:44) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
for i in range(size(x)):
	soma = soma + x[i]
media =  soma/size(x)
d = sqrt((x-media)**2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:10:58) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
print(media)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:11:18) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
print(media)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:11:26) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
print(media)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:19:58) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	elif(g<x):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
File "XXXX", line 9
    elif(g<x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:20:17) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	elif(g<x):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
File "XXXX", line 9
    elif(g<x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:20:26) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
media =  soma/size(x)
	elif(g<x):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
File "XXXX", line 9
    elif(g<x):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:20:37) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
elif(g<x):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
File "XXXX", line 9
    elif(g<x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:21:05) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 17:24:33) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- EXECUTION TIME:
1.15931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 9, in <module>
    if(g<x):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:32:44) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:32:44) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- EXECUTION TIME:
1.11627
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 10, in <module>
    d=((x-media)**2/(n-1))**0.5
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:33:11) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 11:09:44) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:04:15) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(n-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:04:52) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(x-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:05:02) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(x-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:41:54) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(x-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:08:22) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/((size(x)-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
File "XXXX", line 11
    g= g+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:08:32) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(size(x)-1)**0.5
		g= g+1
print(round(d,3))




-- ERROR:
File "XXXX", line 11
    g= g+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:08:42) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x-media)**2/(size(x)-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:14:43) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x[i]-media)**2/(size(x)-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:14:54) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x[i]-media)**2/(size(x)-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:16:24) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x[i]-media)**2/(size(x)-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:17:49) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	print(media)
	if(g<x[i]):
		d=((x[i]-media)**2/(size(x)-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:18:09) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	print(media)
	if(g<x[i]):
		d=((x[i]-media)**2/(size(x)-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:19:29) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
media =  soma/size(x)
if(g<x[i]):
		d=((x[i]-media)**2/(size(x)-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:19:39) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
media =  soma/size(x)
if(g<x[i]):
	d=((x[i]-media)**2/(size(x)-1))**0.5
	g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:19:53) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
media =  soma/size(x)
if(g<x[i]):
	d=((x[i]-media)**2/(size(x)-1))**0.5
	g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:20:49) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x[i]-media)**2/(size(x)-1))**0.5
		g= g+1
		print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:21:01) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x[i]-media)**2/(size(x)-1))**0.5
		g= g+1
		print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:21:06) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
g = 0
d = 0
for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	if(g<x[i]):
		d=((x[i]-media)**2/(size(x)-1))**0.5
		g= g+1
print(round(d,3))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:38:26) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 

for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
print(media)
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:38:40) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 

for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
print(media1)
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:38:43) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 

for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
print(media)
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:39:01) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 

for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
print(media)
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:39:17) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 

for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
print(media)
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:45:12) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 

for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	
i=0
d=0
while(i<size(x[i])):
	d = d+((x[i]-media)**2)
	i=i+1
	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:45:52) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 

for i in range(size(x)):
	soma = soma + x[i]
	media =  soma/size(x)
	
i=0
d=0
while(i<size):
	d = d+((x[i]-media)**2)
	i=i+1
	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:54:46) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
d=0
for i in range(size(x)):
	soma = soma + x[i]
media =  soma/size(x)
for i in range(size(x)):
	d = d+(x[i]-media)**2
	q = size(x)-1
	a = (d/q)**0.5
print(round(a,3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:54:53) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o numero: ")))
soma = 0 
d=0
for i in range(size(x)):
	soma = soma + x[i]
media =  soma/size(x)
for i in range(size(x)):
	d = d+(x[i]-media)**2
	q = size(x)-1
	a = (d/q)**0.5
print(round(a,3))
	
	
-- EXECUTION TIME:
1.21024
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
